GNOME Bugzilla – Bug 758426
State 0 for GtkBox 0x231d270 doesn't match state 128 set via gtk_style_context_set_state
Last modified: 2015-12-07 10:43:04 UTC
Warning spew; I think this is related to why our favicons sometimes get cut off with GTK+ master: (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x231d270 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x2344cf0 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x23703c0 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x2384a50 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x23a7120 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x23c4e40 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x23e2510 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x23f8ba0 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x241e270 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x2436900 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x2449f90 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x247c660 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x2497cf0 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x24b53c0 doesn't match state 128 set via gtk_style_context_set_state () (epiphany:3716): Gtk-WARNING **: State 0 for GtkBox 0x24cca50 doesn't match state 128 set via gtk_style_context_set_state () Backtrace to the first one:
+ Trace 235735
Created attachment 315997 [details] [review] notebook: Fix invalid call to gtk_style_context_get() Company: gtk_style_context_get() (and _get_padding/border/color()) should only ever be called with the same state as gtk_style_context_get_state() Company: usually that's a simple replacing of the old state (like in the trace you posted) Company: sometimes it requires calling gtk_style_context_set_sate() with the right state first Company: and in very rare cases it needs a gtk_style_context_save() before the set_state(), too
The favicon is still getting cut off sometimes....
GTK+ is spamming this warning for all sorts of apps on current Rawhide, for me. I have it for gedit: Dec 01 15:08:51 adam.happyassassin.net gedit.desktop[3335]: (gedit:3335): Gtk-WARNING **: State 0 for GeditView 0x561f8f8be460 doesn't match state 192 set via gtk_style_context_set_state () firefox: Dec 01 15:09:10 adam.happyassassin.net firefox.desktop[3309]: (firefox:3317): Gtk-WARNING **: State 0 for GtkEntry 0x7efd5e34be20 doesn't match state 128 set via gtk_style_context_set_state () evolution: Dec 01 15:09:40 adam.happyassassin.net evolution.desktop[3278]: (evolution:3278): Gtk-WARNING **: State 0 for EMailShellSidebar 0x560a2ead92f0 doesn't match state 192 set via gtk_style_context_set_state () and terminal: Dec 01 14:45:38 adam.happyassassin.net org.gnome.Terminal[2736]: (gnome-terminal-server:3403): Gtk-WARNING **: State 0 for TerminalScreen 0x561f17f595b0 doesn't match state 128 set via gtk_style_context_set_state ()
Filed https://bugzilla.gnome.org/show_bug.cgi?id=758930 as a general GTK+ bug for this...
Attachment 315997 [details] pushed as 235e77d - notebook: Fix invalid call to gtk_style_context_get()