notebook: Fix invalid call to gtk_style_context_get()

Company:  gtk_style_context_get() (and _get_padding/border/color())
should only ever be called with the same state as
gtk_style_context_get_state()
Company:  usually that's a simple replacing of the old state (like in
the trace you posted)
Company:  sometimes it requires calling gtk_style_context_set_sate()
with the right state first
Company:  and in very rare cases it needs a gtk_style_context_save()
before the set_state(), too

https://bugzilla.gnome.org/show_bug.cgi?id=758426